// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: All should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 12,
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    User variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#F0E7D2",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <View
            accessibilityLabel="alice.johnson's avatar"
            accessible={true}
            style={
              [
                {
                  "borderColor": "rgba(44,42,33,0.12)",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "height": 28,
                  "shadowColor": "#2C2A21",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.16,
                  "shadowRadius": 4,
                  "width": 28,
                },
                undefined,
              ]
            }
            testID="avatar"
          >
            <ViewManagerAdapter_ExpoImage
              borderColor={522988065}
              borderRadius={9}
              borderWidth={1}
              containerViewRef={{"current":"Object"}}
              contentFit="cover"
              contentPosition={
                {
                  "left": "50%",
                  "top": "50%",
                }
              }
              height={28}
              nativeViewRef={{"current":"NativeComponent"}}
              onError={[Function]}
              onLoad={[Function]}
              onLoadStart={[Function]}
              onProgress={[Function]}
              placeholder={[]}
              priority="high"
              shadowColor="#2C2A21"
              shadowOffset={
                {
                  "height": 2,
                  "width": 0,
                }
              }
              shadowOpacity={0.16}
              shadowRadius={4}
              source={
                [
                  {
                    "headers": {
                      "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                    },
                    "uri": "https://open.rocket.chat/avatar/alice.johnson?format=png&size=56",
                  },
                ]
              }
              style={
                {
                  "borderColor": "rgba(44,42,33,0.12)",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "height": 28,
                  "shadowColor": "#2C2A21",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.16,
                  "shadowRadius": 4,
                  "width": 28,
                }
              }
              transition={null}
              width={28}
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#A39C86",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "height": 20,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 20,
                    },
                    undefined,
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#3B382E",
                },
              ]
            }
          >
            Alice Johnson
          </Text>
        </View>
      </View>
      <RNGestureHandlerButton
        accessibilityLabel="Remove"
        accessibilityRole="button"
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        foreground={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        hitSlop={10}
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#E4D8BC"
        style={
          [
            {
              "opacity": 1,
              "padding": 2,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2C2A21",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </RNGestureHandlerButton>
    </View>
  </View>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    SIP variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#F0E7D2",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6B675A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#3B382E",
                },
              ]
            }
          >
            +55 11 99999-9999
          </Text>
        </View>
      </View>
      <RNGestureHandlerButton
        accessibilityLabel="Remove"
        accessibilityRole="button"
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        foreground={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        hitSlop={10}
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#E4D8BC"
        style={
          [
            {
              "opacity": 1,
              "padding": 2,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2C2A21",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </RNGestureHandlerButton>
    </View>
  </View>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    Long username variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#F0E7D2",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <View
            accessibilityLabel="this.is.a.very.long.username.for.storybook.preview's avatar"
            accessible={true}
            style={
              [
                {
                  "borderColor": "rgba(44,42,33,0.12)",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "height": 28,
                  "shadowColor": "#2C2A21",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.16,
                  "shadowRadius": 4,
                  "width": 28,
                },
                undefined,
              ]
            }
            testID="avatar"
          >
            <ViewManagerAdapter_ExpoImage
              borderColor={522988065}
              borderRadius={9}
              borderWidth={1}
              containerViewRef={{"current":"Object"}}
              contentFit="cover"
              contentPosition={
                {
                  "left": "50%",
                  "top": "50%",
                }
              }
              height={28}
              nativeViewRef={{"current":"NativeComponent"}}
              onError={[Function]}
              onLoad={[Function]}
              onLoadStart={[Function]}
              onProgress={[Function]}
              placeholder={[]}
              priority="high"
              shadowColor="#2C2A21"
              shadowOffset={
                {
                  "height": 2,
                  "width": 0,
                }
              }
              shadowOpacity={0.16}
              shadowRadius={4}
              source={
                [
                  {
                    "headers": {
                      "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                    },
                    "uri": "https://open.rocket.chat/avatar/this.is.a.very.long.username.for.storybook.preview?format=png&size=56",
                  },
                ]
              }
              style={
                {
                  "borderColor": "rgba(44,42,33,0.12)",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "height": 28,
                  "shadowColor": "#2C2A21",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.16,
                  "shadowRadius": 4,
                  "width": 28,
                }
              }
              transition={null}
              width={28}
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#A39C86",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "height": 20,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 20,
                    },
                    undefined,
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#3B382E",
                },
              ]
            }
          >
            Long display name to validate text truncation behavior for SelectedPeer in narrow widths
          </Text>
        </View>
      </View>
      <RNGestureHandlerButton
        accessibilityLabel="Remove"
        accessibilityRole="button"
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        foreground={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        hitSlop={10}
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#E4D8BC"
        style={
          [
            {
              "opacity": 1,
              "padding": 2,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2C2A21",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </RNGestureHandlerButton>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: LongUsername should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 12,
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    Long username variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#F0E7D2",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <View
            accessibilityLabel="this.is.a.very.long.username.for.storybook.preview's avatar"
            accessible={true}
            style={
              [
                {
                  "borderColor": "rgba(44,42,33,0.12)",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "height": 28,
                  "shadowColor": "#2C2A21",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.16,
                  "shadowRadius": 4,
                  "width": 28,
                },
                undefined,
              ]
            }
            testID="avatar"
          >
            <ViewManagerAdapter_ExpoImage
              borderColor={522988065}
              borderRadius={9}
              borderWidth={1}
              containerViewRef={{"current":"Object"}}
              contentFit="cover"
              contentPosition={
                {
                  "left": "50%",
                  "top": "50%",
                }
              }
              height={28}
              nativeViewRef={{"current":"NativeComponent"}}
              onError={[Function]}
              onLoad={[Function]}
              onLoadStart={[Function]}
              onProgress={[Function]}
              placeholder={[]}
              priority="high"
              shadowColor="#2C2A21"
              shadowOffset={
                {
                  "height": 2,
                  "width": 0,
                }
              }
              shadowOpacity={0.16}
              shadowRadius={4}
              source={
                [
                  {
                    "headers": {
                      "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                    },
                    "uri": "https://open.rocket.chat/avatar/this.is.a.very.long.username.for.storybook.preview?format=png&size=56",
                  },
                ]
              }
              style={
                {
                  "borderColor": "rgba(44,42,33,0.12)",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "height": 28,
                  "shadowColor": "#2C2A21",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.16,
                  "shadowRadius": 4,
                  "width": 28,
                }
              }
              transition={null}
              width={28}
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#A39C86",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "height": 20,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 20,
                    },
                    undefined,
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#3B382E",
                },
              ]
            }
          >
            Long display name to validate text truncation behavior for SelectedPeer in narrow widths
          </Text>
        </View>
      </View>
      <RNGestureHandlerButton
        accessibilityLabel="Remove"
        accessibilityRole="button"
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        foreground={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        hitSlop={10}
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#E4D8BC"
        style={
          [
            {
              "opacity": 1,
              "padding": 2,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2C2A21",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </RNGestureHandlerButton>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: Sip should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 12,
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    SIP variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#F0E7D2",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#6B675A",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#3B382E",
                },
              ]
            }
          >
            +55 11 99999-9999
          </Text>
        </View>
      </View>
      <RNGestureHandlerButton
        accessibilityLabel="Remove"
        accessibilityRole="button"
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        foreground={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        hitSlop={10}
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#E4D8BC"
        style={
          [
            {
              "opacity": 1,
              "padding": 2,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2C2A21",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </RNGestureHandlerButton>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: User should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "gap": 12,
      "padding": 16,
    }
  }
>
  <Text
    style={
      {
        "fontSize": 13,
        "opacity": 0.6,
      }
    }
  >
    User variant
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 10,
            "minHeight": 48,
            "paddingHorizontal": 10,
          },
          {
            "backgroundColor": "#F0E7D2",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 28,
            }
          }
        >
          <View
            accessibilityLabel="alice.johnson's avatar"
            accessible={true}
            style={
              [
                {
                  "borderColor": "rgba(44,42,33,0.12)",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "height": 28,
                  "shadowColor": "#2C2A21",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.16,
                  "shadowRadius": 4,
                  "width": 28,
                },
                undefined,
              ]
            }
            testID="avatar"
          >
            <ViewManagerAdapter_ExpoImage
              borderColor={522988065}
              borderRadius={9}
              borderWidth={1}
              containerViewRef={{"current":"Object"}}
              contentFit="cover"
              contentPosition={
                {
                  "left": "50%",
                  "top": "50%",
                }
              }
              height={28}
              nativeViewRef={{"current":"NativeComponent"}}
              onError={[Function]}
              onLoad={[Function]}
              onLoadStart={[Function]}
              onProgress={[Function]}
              placeholder={[]}
              priority="high"
              shadowColor="#2C2A21"
              shadowOffset={
                {
                  "height": 2,
                  "width": 0,
                }
              }
              shadowOpacity={0.16}
              shadowRadius={4}
              source={
                [
                  {
                    "headers": {
                      "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                    },
                    "uri": "https://open.rocket.chat/avatar/alice.johnson?format=png&size=56",
                  },
                ]
              }
              style={
                {
                  "borderColor": "rgba(44,42,33,0.12)",
                  "borderRadius": 9,
                  "borderWidth": 1,
                  "height": 28,
                  "shadowColor": "#2C2A21",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.16,
                  "shadowRadius": 4,
                  "width": 28,
                }
              }
              transition={null}
              width={28}
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#A39C86",
                  "fontSize": 20,
                },
                [
                  {
                    "lineHeight": 20,
                  },
                  [
                    {
                      "height": 20,
                      "textAlign": "center",
                      "textAlignVertical": "center",
                      "width": 20,
                    },
                    undefined,
                  ],
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "color": "#3B382E",
                },
              ]
            }
          >
            Alice Johnson
          </Text>
        </View>
      </View>
      <RNGestureHandlerButton
        accessibilityLabel="Remove"
        accessibilityRole="button"
        activeOpacity={0.3}
        borderless={true}
        collapsable={false}
        delayLongPress={600}
        foreground={true}
        handlerTag={-1}
        handlerType="NativeViewGestureHandler"
        hitSlop={10}
        innerRef={null}
        onActiveStateChange={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onPress={[Function]}
        rippleColor="#E4D8BC"
        style={
          [
            {
              "opacity": 1,
              "padding": 2,
            },
            {
              "cursor": undefined,
            },
          ]
        }
        testID="new-media-call-clear-selected-peer"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2C2A21",
                "fontSize": 16,
              },
              [
                {
                  "lineHeight": 16,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </RNGestureHandlerButton>
    </View>
  </View>
</View>
`;
